public class CodeEvaluator {
    public static int[] evaluateGuess(String secretCode, String guess) {
        // 实现评估逻辑，返回Bulls和Cows的数量
        return new int[]{0, 0}; // 示例返回值
    }
}